--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "pnpm -r run build"
+    "build": "pnpm -r run build",
+    "dev": "concurrently --kill-others-on-fail --names backend,frontend \"pnpm -C examples/chatkit-host run serve\" \"pnpm -C examples/deep-researcher run backend\" \"pnpm -C examples/deep-researcher run frontend\""
+  },
+  "dependencies": {
+    "concurrently": "^9.2.1"
   }
 }
