feat(mindmap-assistant): add AI-powered mindmap editor example
  - Interactive mindmap canvas with React Flow
  - ChatKit SDK integration with client tools and effects
  - ClientToolMiddleware: get_selected_nodes for querying UI selection
  - ClientEffectMiddleware: update_mindmap, focus_node, highlight_nodes
  - Node selection with visual feedback (blue + yellow ring)
  - FastAPI backend for session management
  - Zustand for state management with refs to avoid stale closure
  - Includes Mindmap-agents.yaml for XpertAI agent configuration

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "build": "pnpm -r run build",
-    "dev": "concurrently --kill-others-on-fail --names backend,frontend \"pnpm -C examples/chatkit-host run serve\" \"pnpm -C examples/deep-researcher run backend\" \"pnpm -C examples/deep-researcher run frontend\""
+    "dev": "concurrently --kill-others-on-fail --names backend,frontend \"pnpm -C examples/chatkit-host run serve\" \"pnpm -C examples/deep-researcher run backend\" \"pnpm -C examples/deep-researcher run frontend\"",
+    "mindmap-assistant": "cd examples/mindmap-assistant && pnpm run dev",
+    "mindmap-assistant:install": "cd examples/mindmap-assistant && pnpm run install:all"
   },
   "dependencies": {
     "concurrently": "^9.2.1"
