--- a/examples/mindmap-assistant/frontend/.env.example
+++ b/examples/mindmap-assistant/frontend/.env.example
@@ -1,9 +1,9 @@
 # XpertAI API Configuration
-VITE_XPERTAI_API_URL=https://api.xpertai.com
+VITE_XPERTAI_API_URL=http://localhost:3000/api/ai
 VITE_XPERT_ID=your_xpert_id_here
 
 # ChatKit UI Frame URL (served by chatkit-host on port 5200)
 VITE_CHATKIT_FRAME_URL=http://localhost:5200
 
 # Backend API URL (optional, defaults to same origin)
-VITE_API_BASE_URL=
+VITE_API_BASE_URL=http://localhost:8000
